Updated the resource link for Groenling

--- a/notebooks/vogelscraper_v2.ipynb
+++ b/notebooks/vogelscraper_v2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "PROCESSEDFOLDER = 'data/edited'\n",
     "\n",
     "# how many images to retrieve per species\n",
-    "MAXIMAGES = 20000\n",
+    "MAXIMAGES = 10000\n",
     "\n",
     "# the number of images returned per page (needed for pagination)\n",
     "IMAGESPERPAGE = 24\n",
@@ -91,7 +91,7 @@
     "    'id': '55'\n",
     "}, {\n",
     "    'name': 'groenling',\n",
-    "    'id': '107'\n",
+    "    'id': '261771'\n",
     "}, {\n",
     "    'name': 'heggenmus',\n",
     "    'id': '118'\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
     "        '2016-02-20&before_date=2017-02-20',\n",
     "        '2015-02-20&before_date=2016-02-20',\n",
     "        '2014-02-20&before_date=2015-02-20',\n",
-    "        '2013-02-20&before_date=2014-02-20']\n",
+    "        '2013-02-20&before_date|=2014-02-20']\n",
     "    \n",
     "    time_index = 0\n",
     "    \n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,14 +391,14 @@
     "        for item in meta:\n",
     "            \n",
     "            #ignore male/female symbols with the ignore flag\n",
-    "            item=item.decode('utf-8', 'ignore')\n",
+    "            decoded_item=item.decode('utf-8', 'ignore')\n",
     "            \n",
-    "            f.write(\"%s\\n\" % item)"
+    "            f.write(\"%s\\n\" % decoded_item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -448,11 +448,11 @@
        " 'Locatie': 'Almere - Noorderplassen - Woonwijk (oud) (FL)',\n",
        " 'Validatiestatus': 'goedgekeurd (automatische validatie)',\n",
        " 'Licentie': 'CC-BY-NC-ND',\n",
-       " 'Views': '98',\n",
+       " 'Views': '99',\n",
        " 'Likes': '0'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,42 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "So far, the search for wielewaal has returned 0 photos\n",
-      "So far, the search for wielewaal has returned 234 photos\n",
-      "So far, the search for wielewaal has returned 476 photos\n",
-      "So far, the search for wielewaal has returned 744 photos\n",
-      "So far, the search for wielewaal has returned 958 photos\n",
-      "So far, the search for wielewaal has returned 1115 photos\n",
-      "So far, the search for wielewaal has returned 1281 photos\n",
-      "Found 1437 photos for wielewaal.\n",
-      "Found 819 new photos of wielewaal\n"
-     ]
-    },
-    {
-     "ename": "UnicodeEncodeError",
-     "evalue": "'charmap' codec can't encode character '\\u2642' in position 136: character maps to <undefined>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-05f021b0cee1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# small tester to see if any of this looks good\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbird_scraper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'wielewaal'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'350'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-26-d6474a9104f7>\u001b[0m in \u001b[0;36mbird_scraper\u001b[1;34m(species, identifier)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;31m#store metadata to flat file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m     \u001b[0mstore_meta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspecies\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-17-a9b38d3e51cb>\u001b[0m in \u001b[0;36mstore_meta\u001b[1;34m(species, meta)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspecies\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.txt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a+'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmeta\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m             \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%s\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\encodings\\cp1252.py\u001b[0m in \u001b[0;36mencode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mIncrementalEncoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIncrementalEncoder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcharmap_encode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mencoding_table\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mIncrementalDecoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIncrementalDecoder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'charmap' codec can't encode character '\\u2642' in position 136: character maps to <undefined>"
+      "So far, the search for groenling has returned 0 photos\n"
      ]
     }
    ],
    "source": [
     "# small tester to see if any of this looks good\n",
-    "bird_scraper('wielewaal', '350')"
+    "bird_scraper('groenling', '261771')\n",
+    "show_random_img_from_folder(RAWFOLDER+'/groenling')"
    ]
   },
   {
